@@ -39,24 +39,15 @@ class ConditionEvaluationResultTests {
 				.isEqualTo("ConditionEvaluationResult [enabled = true, reason = 'reason']");
 	}
 
-	@EmptyReasonsTest
-	void enabledWithInvalidReason(@Nullable String reason) {
+	@BlankReasonsTest
+	void enabledWithBlankReason(@Nullable String reason) {
 		@SuppressWarnings("NullAway")
 		var result = ConditionEvaluationResult.enabled(reason);
 
 		assertThat(result.isDisabled()).isFalse();
-
-		if (reason == null) {
-			assertThat(result.getReason()).isEmpty();
-			assertThat(result).asString()//
-					.isEqualTo("ConditionEvaluationResult [enabled = true, reason = '<unknown>']");
-		}
-		// TODO Remove else-block once issues are addressed.
-		else {
-			assertThat(result.getReason()).contains(reason);
-			assertThat(result).asString()//
-					.isEqualTo("ConditionEvaluationResult [enabled = true, reason = '%s']", reason);
-		}
+		assertThat(result.getReason()).isEmpty();
+		assertThat(result).asString()//
+				.isEqualTo("ConditionEvaluationResult [enabled = true, reason = '<unknown>']");
 	}
 
 	@Test
@@ -69,28 +60,19 @@ class ConditionEvaluationResultTests {
 				.isEqualTo("ConditionEvaluationResult [enabled = false, reason = 'default']");
 	}
 
-	@EmptyReasonsTest
-	void disabledWithInvalidDefaultReason(@Nullable String reason) {
+	@BlankReasonsTest
+	void disabledWithBlankDefaultReason(@Nullable String reason) {
 		@SuppressWarnings("NullAway")
 		var result = ConditionEvaluationResult.disabled(reason);
 
 		assertThat(result.isDisabled()).isTrue();
-
-		if (reason == null) {
-			assertThat(result.getReason()).isEmpty();
-			assertThat(result).asString()//
-					.isEqualTo("ConditionEvaluationResult [enabled = false, reason = '<unknown>']");
-		}
-		// TODO Remove else-block once issues are addressed.
-		else {
-			assertThat(result.getReason()).contains(reason);
-			assertThat(result).asString()//
-					.isEqualTo("ConditionEvaluationResult [enabled = false, reason = '%s']", reason);
-		}
+		assertThat(result.getReason()).isEmpty();
+		assertThat(result).asString()//
+				.isEqualTo("ConditionEvaluationResult [enabled = false, reason = '<unknown>']");
 	}
 
-	@EmptyReasonsTest
-	void disabledWithValidDefaultReasonAndInvalidCustomReason(@Nullable String customReason) {
+	@BlankReasonsTest
+	void disabledWithDefaultReasonAndBlankCustomReason(@Nullable String customReason) {
 		@SuppressWarnings("NullAway")
 		var result = ConditionEvaluationResult.disabled("default", customReason);
 
@@ -100,53 +82,30 @@ class ConditionEvaluationResultTests {
 				.isEqualTo("ConditionEvaluationResult [enabled = false, reason = 'default']");
 	}
 
-	@EmptyReasonsTest
-	void disabledWithInvalidDefaultReasonAndValidCustomReason(@Nullable String reason) {
+	@BlankReasonsTest
+	void disabledWithBlankDefaultReasonAndCustomReason(@Nullable String reason) {
 		@SuppressWarnings("NullAway")
 		var result = ConditionEvaluationResult.disabled(reason, "custom");
 
 		assertThat(result.isDisabled()).isTrue();
-
-		// TODO Convert to single assertion once issues are addressed.
-		// The following should hold for all null/blank default reasons.
-		// assertThat(result).asString().isEqualTo("ConditionEvaluationResult [enabled = false, reason = 'custom']");
-
-		if (reason == null) {
-			assertThat(result.getReason()).contains("null ==> custom");
-			assertThat(result).asString()//
-					.isEqualTo("ConditionEvaluationResult [enabled = false, reason = 'null ==> custom']");
-		}
-		else {
-			var generatedReason = reason + " ==> custom";
-			assertThat(result.getReason()).contains(generatedReason);
-			assertThat(result).asString()//
-					.isEqualTo("ConditionEvaluationResult [enabled = false, reason = '%s']", generatedReason);
-		}
+		assertThat(result.getReason()).contains("custom");
+		assertThat(result).asString().isEqualTo("ConditionEvaluationResult [enabled = false, reason = 'custom']");
 	}
 
-	@EmptyReasonsTest
-	void disabledWithInvalidDefaultReasonAndInvalidCustomReason(@Nullable String reason) {
+	@BlankReasonsTest
+	void disabledWithBlankDefaultReasonAndBlankCustomReason(@Nullable String reason) {
 		// We intentionally use the reason as both the default and custom reason.
 		@SuppressWarnings("NullAway")
 		var result = ConditionEvaluationResult.disabled(reason, reason);
 
 		assertThat(result.isDisabled()).isTrue();
-
-		if (reason == null) {
-			assertThat(result.getReason()).isEmpty();
-			assertThat(result).asString()//
-					.isEqualTo("ConditionEvaluationResult [enabled = false, reason = '<unknown>']");
-		}
-		// TODO Remove else-block once issues are addressed.
-		else {
-			assertThat(result.getReason()).contains(reason);
-			assertThat(result).asString()//
-					.isEqualTo("ConditionEvaluationResult [enabled = false, reason = '%s']", reason);
-		}
+		assertThat(result.getReason()).isEmpty();
+		assertThat(result).asString()//
+				.isEqualTo("ConditionEvaluationResult [enabled = false, reason = '<unknown>']");
 	}
 
 	@Test
-	void disabledWithValidDefaultReasonAndCustomReason() {
+	void disabledWithDefaultReasonAndCustomReason() {
 		var result = ConditionEvaluationResult.disabled("default", "custom");
 
 		assertThat(result.isDisabled()).isTrue();
@@ -159,7 +118,7 @@ class ConditionEvaluationResultTests {
 	@ParameterizedTest(name = "[{index}] reason=\"{0}\"")
 	@NullSource
 	@ValueSource(strings = { "", " ", "   ", "\t", "\n" })
-	@interface EmptyReasonsTest {
+	@interface BlankReasonsTest {
 	}
 
 }
